# plan-and-act-repro

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml  data.yaml  eval.yaml  models.yaml  tracing.yaml
configs/prompts/: cot.yaml  executor.yaml  planner.yaml  replanner.yaml
docs/: READING_GUIDE.md  README.md
docs/analysis/: PLAN_AND_ACT_REVIEW.md
docs/architecture/: AGENT_ARCHITECTURE_VISUAL_GUIDE.md  AGENT_FRAMEWORK_ARCHITECTURE.md  ORCHESTRATION_SUBAGENTS_PSEUDOCODE.md  PLANNING_ORCHESTRATION_DEEP_DIVE.md
docs/plans/: REPRODUCTION_PLAN.md  TRAINING_DATA_TRACING_PLAN.md
docs/tracing/: TRACE_DATA_REVIEW_CHECKLIST.md  TRACE_DATA_REVIEW_MINDSET.md  TRACE_TO_SFT_CODE_REVIEW_WALKTHROUGH.md
notebooks/: 01_plan_and_act_real_tool_demo.ipynb  02_complex_query_full_trace_gpt4.ipynb
paper_assets/: 2503.09572v3.html
scripts/: execute_notebook.py  generate_synthetic_data.sh  run_ablation.sh  run_baseline.sh  run_episode_with_trace.sh  run_eval_webarena_lite.sh  run_real_tools_demo.sh  run_tool_demo.sh  setup_env.sh  test_notebook.sh
src/plan_and_act/agents/: executor.py  judge.py  planner.py  replanner.py
tests/: test_data_training_placeholders.py  test_environment_adapters.py  test_eval_ablation.py  test_eval_runner_and_metrics.py  test_executor_action_schema.py  test_llm_utils.py  test_planner_output_schema.py  test_prompt_templates_path.py  test_replanning_transition.py  test_tool_github.py  test_tool_web_runtime.py  test_tools_builtin.py  test_tracing_infra.py  test_utils_misc.py  test_workflow_stop_conditions.py
(+34 files in other folders)
